# haskell-tiger

./: .gitignore  haskell-tiger.cabal  stack.yaml
app/: Main.hs
src/Language/: Tiger.hs
src/Language/Tiger/: #Escape.hs#  AST.hs  Access.hs  Env.hs  Escape.hs  Frame.hs  Gensym.hs  IR.hs  Lexer.x  Loc.hs  MyParser.hs  Parser.y  Semant.hs  Symtab.hs  Temp.hs  Token.hs  Translate.hs  Types.hs  Utils.hs
test/: Spec.hs
