name:                haskell-tiger
version:             0.1.0.0
synopsis:            Tiger compiler from Appel's textbook
description:         Modern Compiler Implementation in Haskell
homepage:            https://github.com/themattchan/haskell-tiger#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@parametri.city
copyright:           2016 Matthew Chan
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  src/Language/Tiger/Lexer.x
                   , src/Language/Tiger/Parser.y

library
  hs-source-dirs:      src
  exposed-modules:     Language.Tiger
                     , Language.Tiger.Loc
                     , Language.Tiger.Token
                     , Language.Tiger.AST
                     , Language.Tiger.Types
                     , Language.Tiger.Gensym
                     , Language.Tiger.Symtab
                     , Language.Tiger.Lexer
                     , Language.Tiger.Parser
                     -- , Language.Tiger.Semant
                     -- , Language.Tiger.Env
                     -- , Language.Tiger.IR
                     -- , Language.Tiger.Temp
                     -- , Language.Tiger.Translate
                     -- , Language.Tiger.Access
  build-tools:         alex
                     , happy
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unordered-containers
                     , array
                     , bytestring
                     , hashable
                     , transformers
                     , mtl
                     , lens
                     , profunctors
                     , contravariant
                     , comonad
                     , QuickCheck
  default-language:    Haskell2010

executable tiger
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-tiger
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-tiger
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , directory
                     , filepath
                     , bytestring

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/themattchan/haskell-tiger
